# Nose-Drive

./: .gitignore  3D_Movement_Mouse-Keyboard.py  3Dmove_Keyboard.py  3rd_Keyboard.py  3rd_eyes.py  Builder.spec  Buttons.py  Drive.py  EldenRing.py  Eye_2buttons.py  FaceKeyboard.py  FaceMouse.py  Face_Mesh.py  Fifa.py  Head_3rd.py  Head_Arrows.py  Head_Mouse.py  Head_OneButton_Gamepad.py  Head_OneButton_Keyboard.py  Horizon.py  Mario_GNAO.py  Nose-Drive.nsi  Nose_3dmove.py  Nose_3dmove_FaceMesh.py  Nose_3dmove_gamepad.py  Nose_3dmove_keyboard.py  Nose_Drive.py  Nose_Drive_FaceMesh.py  Nose_Drive_Standalone.py  Nose_Gamepad.py  Nose_Mouse.py  Nose_Platform.py  Nose_Platform_FaceMesh.py  OneButton.py  Platform.py  README.md  Redirect_1.py  START.bat  Skyrim.py  Skyrim_Keyboard.py  (+12 more)
Beam_Eyetracker_Scripts/: Eye_2buttons.py  Eye_3rd_Gamepad.py  Eye_Arrows.py  Eye_Drive.py  Eye_Drive_Horizontal.py  Eye_Drive_Horizontal.spec  Eye_Mouse.py  Eye_sample.py  README.md
NoseDrive_Settings/: NoseDrive_Settings.sln
Nose_Drive_GUI/: Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Nose-Drive_End-User_License_Agreement.txt  Nose_Drive_GUI.csproj  Nose_Drive_GUI.sln  Program.cs  README.md
Nose_Drive_Starter/: Form1.Designer.cs  Form1.cs  Nose_Drive_Starter.csproj  Nose_Drive_Starter.sln
Nose_Tracker/: main.py
Tested_Game_Scripts/: BaldursGate.py  Fifa.py  Horizon.py  Squadrons.py
VoiceAttack_Profiles/: 3Dmove_ITA-Profile.vap  Elden Ring-Profile.vap  Horizon_ITA-Profile.vap  JoystickOutput.vap  README.md  Skyrim-Profile.vap  Skyrim_ITA-Profile.vap  Skyrim_ITA_Keyboard-Profile.vap  WorldOfWarships-Profile.vap
eyeware/: README.md  client.cp310-win_amd64.pyd
eyeware_beam/: Eye_Drive.py  Eye_Drive.spec  Eye_Head_Combo.py  Eye_Mouse.py  Eye_Mouse.spec  Head_movement.py  (+2 more)
(+53 files in other folders)
